--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,10 @@
     <h1>File Uploader</h1>
     <form action="/log-in" method="post">
         <label for="email">Email</label><br>
-        <input type="email"><br><br>
+        <input type="email" name="email"><br><br>
 
         <label for="password">Password</label><br>
-        <input type="password" placeholder="*******"><br><br>
+        <input type="password" placeholder="*******" name="password"><br><br>
         <button type="submit">Log in</button><br>
     </form>
     <p> Don't have an account? <a href="/sign-up"> signUp</a> or <a href="/home">login with a demo account</a></p>
