you can now modify you pfp

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -8,5 +8,7 @@
 <body>
  
 <%- include('./partails/profile') %>
+
+<p>Create a post with image <button><a href="/Create-Post">Create</a></button></p>
 </body>
 </html>
