--- a/views/manageAccout.ejs
+++ b/views/manageAccout.ejs
@@ -8,10 +8,10 @@
     <a href="/Home">X</a>
     <h2>Profile details</h2>
     <p>Profile</p>  
-    <p>Username: <%= user.name %></p> 
+    <p>Username: <%= user.name %></p>  <button>Update Username</button> <br><br>
 
-    <img src="/uploads/<%= user.profile?.image || 'default-profile.jpg' %>" 
-         alt="User Profile" style="width: 30px; height: 30px; border-radius: 50%;">  
+<img src="/uploads/<%= user.profile?.image || 'default-profile.jpg' %>?t=<%= Date.now() %>" alt="User Profile" style="width: 30px; height: 30px; border-radius: 50%;">
+ 
 
 <form action="/update-profile-image" method="POST" enctype="multipart/form-data">
     <label for="profileImage">Update Profile Image</label>
