--- a/views/CreatePost.ejs
+++ b/views/CreatePost.ejs
@@ -9,7 +9,7 @@
 
   <h2>Create a New Post</h2>
 
-  <form action="/create-post" method="POST" enctype="multipart/form-data">
+  <form action="/create-Post" method="POST" enctype="multipart/form-data">
     <label for="title">Title</label><br>
     <input type="text" name="title" required><br><br>
 
