add post creation with image support

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -10,5 +10,9 @@
 <%- include('./partails/profile') %>
 
 <p>Create a post with image <button><a href="/Create-Post">Create</a></button></p>
+<p>click here to see posts <button><a href="/view-Post">see</a></button></p>
+
+
+
 </body>
 </html>
