--- a/views/manageAccout.ejs
+++ b/views/manageAccout.ejs
@@ -8,7 +8,8 @@
     <a href="/Home">X</a>
     <h2>Profile details</h2>
     <p>Profile</p>  
-    <p>Username: <%= user.name %></p>  <button>Update Username</button> <br><br>
+    <p>Username: <%= user.name %></p>  
+    
 
 <img src="/uploads/<%= user.profile?.image || 'default-profile.jpg' %>?t=<%= Date.now() %>" alt="User Profile" style="width: 30px; height: 30px; border-radius: 50%;">
  
