--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=\, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anonymous User</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+  <style>
+    html, body {
+      height: 100%;
+    }
+  </style>
 </head>
-<body>
-        <h1>Hello, Anonymous User</h1>
-        <a href="/log-in">go login</a>
+<body class="has-background-dark has-text-light">
+
+  <section class="section is-flex is-justify-content-center is-align-items-center" style="height: 100vh;">
+    <div class="container has-text-centered">
+      <h1 class="title has-text-light">Hello, Anonymous User</h1>
+      <a href="/log-in" class="button is-light is-large">Go to Login</a>
+    </div>
+  </section>
+
 </body>
 </html>
